<resources>
    <string name="app_name">Login</string>
    <string name="title_activity_registro">Registro</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- MainActivity -->
    <string name="usuario_login_hint">Usuario</string>
    <string name="contraseña_login_hint">Contraseña</string>
    <string name="tv_olvido_contraseña">¿Olvido la contraseña?</string>
    <string name="btn_iniciar_sesion">Iniciar Sesion</string>
    <string name="tv_no_registrado">¿No esta registrado?</string>
    <string name="tv_registrarse">Registrarse</string>

    <!-- FragmentoCliente -->
    <string name="hint_nombre_completo">Nombre Completo</string>
    <string name="hint_nombre_de_usuario">Nombre de Usuario</string>
    <string name="hint_email">Email</string>
    <string name="hint_telefono">Teléfono</string>
    <string name="hint_contraseña">Contraseña</string>
    <string name="hint_confirmar_contraseña">Confirmar Contraseña</string>
    <string name="btn_registrarse">Registrarse</string>
    <string name="tv_ya_esta_registrado">¿Ya esta registrado?</string>
    <string name="tv_iniciar_sesión">Iniciar Sesión</string>
    <string name="hint_especialidad">Especialidad</string>
</resources>